fix to previous release (overlapping footer)

--- a/source/content/menu_button.css
+++ b/source/content/menu_button.css
@@ -9,3 +9,7 @@
 .menu-item span {
     margin-left: 12px;
 }
+
+div.menu-item:last-of-type {
+    margin-bottom: 16px;
+}
